<resources>
    <string name="app_name">EPPYK</string>
    <string name="what_is_your_question">WHAT\'S YOUR QUESTION?</string>
    <string name="ask_it_here">ask it here</string>
    <string name="and_shake">AND SHAKE YOUR PHONE TO GET THE ANSWER</string>
    <string name="button_save_answer">Save the answer</string>
    <string name="button_try_again">Ask Another Question</string>
    <string name="l10n_title">SELECT THE LANGUAGE</string>
    <string name="button_done">DONE</string>
    <string name="l10n_hint">SELECT WISELY BUT REMEMBER THAT YOU\'RE ALWAYS CAN CHANGE YOUR CHOICE PRETTY EASY BY TAPING ON GLOBE IN THE TOP LEFT CORNER :)</string>
    <string name="shake_hint">IF YOU DON\'T LIKE THE ANSWER SHAKE IT AGAIN</string>
    <string name="answers_count">822</string>
    <string name="answer_0">Do you know any prayers, my friend?</string>
    <string name="author_0">Sir Guy of Gisbourne, by Basil Rathbone, in The Adventure of Robin Hood, 1938</string>
    <string name="answer_1">You would not kill a man for telling the truth, would you?</string>
    <string name="author_1">Robin Hood, by Errol Flynn, in The Adventure of Robin Hood, 1938</string>
    <string name="answer_2">Such insolence must support a healthy appetite!</string>
    <string name="author_2">Prince John, by Claude Rains, in The Adventure of Robin Hood, 1938</string>
    <string name="answer_3">Urry up and take that ugly face of yours out of \'ere!</string>
    <string name="author_3">Bess, by Una O\'Connor, in The Adventure of Robin Hood, 1938</string>
    <string name="answer_4">You still don\'t understand what you\'re dealing with, do you?</string>
    <string name="author_4">Ash, by Ian Holm, in Alien, 1979</string>
    <string name="answer_5">I can\'t lie to you about your chances, but... you have my sympathies.</string>
    <string name="author_5">Ash, by Ian Holm, in Alien, 1979</string>
    <string name="answer_6">You... BITCH!</string>
    <string name="author_6">Ripley, by Sigourney Weaver, in Alien, 1979</string>
    <string name="answer_7">I don\'t trust him.</string>
    <string name="author_7">Ripley, by Sigourney Weaver, in Alien, 1979</string>
    <string name="answer_8">There is an explanation for this, you know.</string>
    <string name="author_8">Ash, by Ian Holm, in Alien, 1979</string>
    <string name="answer_9">You are my lucky star. You... Lucky, lucky, lucky, lucky, lucky.</string>
    <string name="author_9">Ripley, by Sigourney Weaver, in Alien, 1979</string>
    <string name="answer_10">We don\'t know if it\'s intelligent.</string>
    <string name="author_10">Brett, by Harry Dean Stanton, in Alien, 1979</string>
    <string name="answer_11">This is the worst shit I\'ve ever seen, man.</string>
    <string name="author_11">Brett, by Harry Dean Stanton, in Alien, 1979</string>
    <string name="answer_12">You\'re goddamn right!</string>
    <string name="author_12">Dallas, by Tom Skerritt, in Alien, 1979</string>
    <string name="answer_13">That\'s it, man. Game over, man. Game over!</string>
    <string name="author_13">Hudson, by Bill Paxton, in Aliens, 1986</string>
    <string name="answer_14">Maybe we can build a fire, sing a couple of songs, huh? Why don\'t we try that?</string>
    <string name="author_14">Burke, by Paul Reiser, in Aliens, 1986</string>
    <string name="answer_15">Stop your grinnin\' and drop your linen!</string>
    <string name="author_15">Hudson, by Bill Paxton, in Aliens, 1986</string>
    <string name="answer_16">Yes, honey. I think we both can.</string>
    <string name="author_16">Ripley, by Sigourney Weaver, in Aliens, 1986</string>
    <string name="answer_17">Now go to sleep and don\'t dream.</string>
    <string name="author_17">Ripley, by Sigourney Weaver, in Aliens, 1986</string>
    <string name="answer_18">Because it\'s judgment that defeats us.</string>
    <string name="author_18">Colonel Walter E. Kurtz, by Marlon Brando, in Apocalypse Now, 1979</string>
    <string name="answer_19">Everyone gets everything he wants.</string>
    <string name="author_19">Captain Benjamin L. Willard, by Martin Sheen, in Apocalypse Now, 1979</string>
    <string name="answer_20">You can either surf, or you can fight!</string>
    <string name="author_20">Lieutenant Colonel Bill Kilgore, by Robert Duvall, in Apocalypse Now, 1979</string>
    <string name="answer_21">Have you ever considered any real freedoms? Freedoms from the opinion of others... even the opinions of yourself?</string>
    <string name="author_21">Colonel Walter E. Kurtz, by Marlon Brando, in Apocalypse Now, 1979</string>
    <string name="answer_22">You are like a baby. Making noise, don\'t know what to do.</string>
    <string name="author_22">Neytiri, by Zoe Saldana, in Avatar, 2009</string>
    <string name="answer_23">Easy. Easy...</string>
    <string name="author_23">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_24">It is hard to fill a cup that is already full.</string>
    <string name="author_24">Moat, by CCH Pounder, in Avatar, 2009</string>
    <string name="answer_25">Shut up and fly straight!</string>
    <string name="author_25">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_26">Hold on a second.</string>
    <string name="author_26">Trudy Chacon, by Michelle Rodriguez, in Avatar, 2009</string>
    <string name="answer_27">Run! Definitely run!</string>
    <string name="author_27">Dr. Grace Augustine, by Sigourney Weaver, in Avatar, 2009</string>
    <string name="answer_28">I thought you\'d never ask.</string>
    <string name="author_28">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_29">Think fast.</string>
    <string name="author_29">Dr. Grace Augustine, by Sigourney Weaver, in Avatar, 2009</string>
    <string name="answer_30">Sometimes your whole life boils down to one insane move.</string>
    <string name="author_30">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_31">Don\'t play with that. You\'ll go blind.</string>
    <string name="author_31">Dr. Grace Augustine, by Sigourney Weaver, in Avatar, 2009</string>
    <string name="answer_32">Sooner or later, though, you always have to wake up.</string>
    <string name="author_32">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_33">It was worth a try.</string>
    <string name="author_33">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_34">You have to leave, or you\'re gonna die!</string>
    <string name="author_34">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_35">This is great!</string>
    <string name="author_35">Jake Sully, by Sam Worthington, in Avatar, 2009</string>
    <string name="answer_36">Tell me something, my friend. You ever dance with the devil in the pale moonlight?</string>
    <string name="author_36">The Joker, by Jack Nicholson, in Batman, 1989</string>
    <string name="answer_37">You must be joking.</string>
    <string name="author_37">Vicki Vale, by Kim Basinger, in Batman, 1989</string>
    <string name="answer_38">LIGHTS OUT! Now you wanna get nuts? Come on! Let\'s get nuts.</string>
    <string name="author_38">Batman, by Michael Keaton, in Batman, 1989</string>
    <string name="answer_39">Well, I mean, let\'s face it. You\'re not exactly normal, are you?</string>
    <string name="author_39">Vicki Vale, by Kim Basinger, in Batman, 1989</string>
    <string name="answer_40">Haven\'t you ever heard of the healing power of laughter?</string>
    <string name="author_40">The Joker, by Jack Nicholson, in Batman, 1989</string>
    <string name="answer_41">But, as my plastic surgeon always said: if you gotta go, go with a smile.</string>
    <string name="author_41">The Joker, by Jack Nicholson, in Batman, 1989</string>
    <string name="answer_42">Forget about it.</string>
    <string name="author_42">Axel Foley, by Eddie Murphy, in Beverly Hills Cop, 1984</string>
    <string name="answer_43">Let\'s hear your side of the story.</string>
    <string name="author_43">Axel Foley, by Eddie Murphy, in Beverly Hills Cop, 1984</string>
    <string name="answer_44">You changed man!</string>
    <string name="author_44">Axel Foley, by Eddie Murphy, in Beverly Hills Cop, 1984</string>
    <string name="answer_45">Killing insane people is not good for public relations.</string>
    <string name="author_45">The Sergeant, by Lee Marvin, in The Big Red One, 1980</string>
    <string name="answer_46">Quite an experience to live in fear, isn\'t it? That\'s what it is to be a slave.</string>
    <string name="author_46">Roy Batty, by Rutger Hauer, in Blade Runner, 1982</string>
    <string name="answer_47">You reach down and you flip the tortoise over on its back, Leon.</string>
    <string name="author_47">Holden, by Morgan Paull, in Blade Runner, 1982</string>
    <string name="answer_48">I had in mind something a little more radical.</string>
    <string name="author_48">Roy Batty, by Rutger Hauer, in Blade Runner, 1982</string>
    <string name="answer_49">Nothing is worse than having an itch you can never scratch!</string>
    <string name="author_49">Leon Kowalski, by Brion James, in Blade Runner, 1982</string>
    <string name="answer_50">That\'s no way to treat a friend.</string>
    <string name="author_50">Rick Deckard, by Harrison Ford, in Blade Runner, 1982</string>
    <string name="answer_51">Every man dies, not every man really lives.</string>
    <string name="author_51">William Wallace, by Mel Gibson, in Braveheart, 1995</string>
    <string name="answer_52">You all right? You look a wee bit shaky.</string>
    <string name="author_52">William Wallace, by Mel Gibson, in Braveheart, 1995</string>
    <string name="answer_53">Your heart is free. Have the courage to follow it.</string>
    <string name="author_53">Malcolm Wallace, by Sean Lawlor, in Braveheart, 1995</string>
    <string name="answer_54">If your wit were as big as your voice, me dear, it\'s the great man you\'d be by this.</string>
    <string name="author_54">Dr. Peter Blood, by Errol Flynn, in Captain Blood, 1935</string>
    <string name="answer_55">And that my friend ends a partnership that should never have begun.</string>
    <string name="author_55">Dr. Peter Blood, by Errol Flynn, in Captain Blood, 1935</string>
    <string name="answer_56">A fella can get rich if he\'s lucky.</string>
    <string name="author_56">Honesty Nuttall, by Forrester Harvey, in Captain Blood, 1935</string>
    <string name="answer_57">Wake up, Little Fish. Hey, wake up, wake up! Somebody think you dead, they have celebrations.</string>
    <string name="author_57">Manuel Fidello, by Spencer Tracy, in Captain Courageous, 1937</string>
    <string name="answer_58">You gotta tell big lies to girls to make them happy.</string>
    <string name="author_58">Manuel Fidello, by Spencer Tracy, in Captain Courageous, 1937</string>
    <string name="answer_59">Yippee-ki-yay, motherfucker.</string>
    <string name="author_59">John McClane, by Bruce Willis, in Die Hard, 1988</string>
    <string name="answer_60">Welcome to the party, pal.</string>
    <string name="author_60">John McClane, by Bruce Willis, in Die Hard, 1988</string>
    <string name="answer_61">Very good, you\'ve figured it out already.</string>
    <string name="author_61">Hans Gruber, by Alan Rickman, in Die Hard, 1988</string>
    <string name="answer_62">What the hell you talking about, man.</string>
    <string name="author_62">Sergeant Al Powell, by Reginald Veljohnson, in Die Hard, 1988</string>
    <string name="answer_63">Oh, yeah, that\'s right. That\'s what\'s it\'s all about, all right. But talkin\' about it and bein\' it, that\'s two different things.</string>
    <string name="author_63">George Hanson, by Jack Nicholson, in Easy Rider, 1969</string>
</resources>