<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/l10n_fragment_background"
    android:alpha="0.9"
    android:paddingTop="16dip"
    android:paddingBottom="16dip"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l10n_title"
            android:textColor="@color/textColor"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            />

        <Button
            android:id="@+id/DoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/doneButtonTextColor"
            android:text="@string/button_done"
            android:textSize="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@null"

            />


    </RelativeLayout>



    <TextView
        android:id="@+id/L10nHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l10n_hint"
        android:textColor="@color/textColor"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:textSize="10dp"
        android:textAlignment="center"
        />


</LinearLayout>