<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/sky_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/StarsGifView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="fitCenter"
        android:src="@drawable/star_begin"
        android:visibility="gone" />

    <nebo15.eppyk.gif.GIFView
        android:id="@+id/StarsGifView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="fitCenter"
        android:src="@drawable/star_begin" />


    <!-- Control UI -->
    <TextView
        android:id="@+id/CtrlWhatIsYourQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:paddingBottom="115dip"
        android:text="@string/what_is_your_question"
        android:textColor="@color/textColor"
        android:textSize="22dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/CtrlQuestionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CtrlWhatIsYourQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dip"
        android:layout_marginRight="45dip"
        android:layout_marginTop="-110dip"
        android:hint="@string/ask_it_here"
        android:lines="1"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:textSize="16dp"
        android:visibility="gone" />


    <nebo15.eppyk.gif.GIFView
        android:id="@+id/handImageView"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_below="@+id/CtrlQuestionEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:src="@drawable/hand"
        android:visibility="gone" />


    <TextView
        android:id="@+id/CtrlShakeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/and_shake"
        android:textColor="@color/textColor"
        android:textSize="12dp"
        android:visibility="gone" />


    <!-- Answer -->
    <EditText
        android:id="@+id/QuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="100dip"
        android:enabled="false"
        android:focusable="false"
        android:maxHeight="70dip"
        android:maxWidth="200dip"
        android:textColor="@color/textColor"
        android:textSize="14dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/AnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:maxLines="6"
        android:paddingBottom="40dip"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:visibility="gone" />

    <!-- LOGO -->
    <ImageView
        android:id="@+id/LogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-12dip"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="120dip"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/logo" />

    <!-- PLANET -->
    <ImageView
        android:id="@+id/PlanetImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitStart"
        android:src="@mipmap/planet" />

    <!-- DOG -->
    <nebo15.eppyk.gif.GIFView
        android:id="@+id/DogImageView"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_above="@+id/PlanetImageView"
        android:layout_marginBottom="-12dip"
        android:layout_marginLeft="30dip"
        android:src="@drawable/dog_move_1" />

    <!-- MAN -->
    <nebo15.eppyk.gif.GIFView
        android:id="@+id/ManImageView"
        android:layout_width="180dip"
        android:layout_height="180dip"
        android:layout_above="@+id/PlanetImageView"
        android:layout_marginBottom="-16dip"
        android:layout_marginLeft="-15dip"
        android:src="@drawable/man_static" />



    <LinearLayout
        android:id="@+id/Buttonslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dip">

        <Button
            android:id="@+id/SaveButton"
            style="@style/SaveButton"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:alpha="0"
            android:enabled="false"
            android:textSize="12dp"
            android:text="@string/button_save_answer"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/TryAgainButton"
            style="@style/TryAgainButton"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:alpha="0"
            android:enabled="false"
            android:textSize="12dp"
            android:text="@string/button_try_again"
            android:textAllCaps="false" />

    </LinearLayout>


    <TextView
        android:id="@+id/AuthorText"
        android:layout_above="@id/Buttonslayout"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="20dip"
        android:maxLines="8"
        android:textAlignment="textEnd"
        android:textColor="@color/textColor"
        android:textSize="9dp"
        android:text="@string/and_shake"
        android:visibility="gone"
        />


    <ImageButton
        android:id="@+id/GlobusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:src="@mipmap/globe" />

    <View
        android:id="@+id/WhiteView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:visibility="gone" />



    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/l10nFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.95"
        />



</RelativeLayout>
